Fix: #12554 p-image inside p-scrollPanel - Scrollbar shows through image

--- a/src/app/components/scrollpanel/scrollpanel.css
+++ b/src/app/components/scrollpanel/scrollpanel.css
@@ -3,7 +3,6 @@
     width: 100%;
     height: 100%;
     position: relative;
-    z-index: 1;
     float: left;
 }
 
@@ -20,7 +19,6 @@
     position: relative;
     background: #c1c1c1;
     border-radius: 3px;
-    z-index: 2;
     cursor: pointer;
     opacity: 0;
     transition: opacity 0.25s linear;
